<resources>
    <string name="app_name">ABCdoCadu</string>
    <string name="Intro_main"><b>Olá!</b>\n\nEu sou o Cadu</string>
    <string name="title_login" translatable="false">Login</string>
    <string name="Input_password">Insira a sua senha</string>
    <string name="Input_email">Insira o seu email</string>
    <string name="Btn_login">Entrar</string>
    <string name="checkbox_login">Guardar dados</string>
    <string name="Desc_cloud" translatable="false">Cloud</string>
    <string name="btn_Adivinha">Adivinha</string>
    <string name="title_register">Registro</string>
    <string name="label_username">Nome</string>
    <string name="label_email" translatable="false">Email</string>
    <string name="label_pass">Senha</string>
    <string name="input_username">Insira seu nome</string>
    <string name="ic_back">Voltar ao início</string>
    <string name="label_emailpassword">Autenticação</string>
    <string name="sign_in">Entrar</string>
    <string name="generic_signin_fmt">Entre com %s</string>
    <string name="generic_title_text">OAuth</string>
    <string name="emailpassword_title_text">Email e senha</string>
    <string name="emailpassword_status_fmt">Email do utilizador: %1$s (verificado: %2$b)</string>
    <string name="generic_status_fmt">Utilizador: %s (%s)</string>
    <string name="generic_label_provider">Provedor:</string>
    <string name="enroll_mfa">Entrar com MFA</string>
    <string name="unenroll_mfa">Voltar sem MFA</string>
    <string name="reload">Recarregar</string>
    <string name="error_sign_in_failed">O acesso falhou, seja os logs para mais detalhes</string>
    <string name="multi_factor_signed_out">Você não está logado.</string>
    <string name="get_custom_token">Obter Token</string>
    <string name="create_account">Criar conta</string>
    <string name="send_link">Enviar link</string>
    <string name="sign_out">Sair</string>
    <string name="verify_email">Verificar</string>
    <string name="loading">Carregando...</string>
    <string name="custom_token">Customizar Token</string>
    <string name="hint_user_id">ID do utilizador</string>
    <string name="desc_emailpassword">Utilize um email ou senha para se autenticar com Firebase</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Senha</string>
    <string name="desc_firebase_lockup">Firebase logo e nome</string>
    <string name="auth_failed">Erro na autenticação</string>
    <string name="start_phone_auth">Começar</string>
    <string name="verify_phone_auth">Verificar</string>
    <string name="resend_phone_auth">Reenviar</string>
    <string name="hint_phone_number">Número de celular</string>
    <string name="hint_verification_code">Código de verificação</string>
    <string name="status_code_sent">Código enviado</string>
    <string name="status_verification_failed">Erro na autenticação</string>
    <string name="status_verification_succeeded">Autenticado com sucesso</string>
    <string name="status_sign_in_failed">Erro na autenticação</string>
    <string name="instant_validation">validação instantanea</string>
    <string name="firebase_status_fmt" translatable="false">Firebase UID: %s</string>
    <string name="firebase_user_management">Firebase - Gestão de utilizador</string>
    <string name="signed_in">Entrar</string>
    <string name="signed_out">Sair</string>
    <string name="token_null" translatable="false">Token: null</string>
    <string name="btn_register">Cadastre-se</string>
    <string name="btnHomeDict">Dicionário</string>
    <string name="btnHomePlayGame">Jogar</string>
    <string name="btnHomeCAA">CAA</string>
    <string name="btnGoBackToCategories">Categorias</string>

    /* Form */
    <string name="errorEmptyPassword">Senha inválida! Preencha o campo.</string>
    <string name="errorEmptyEmail">Email inválido! Preencha o campo.</string>
    <string name="errorEmptyUsername">Nome inválido! Preencha o campo.</string>
    <string name="errorInvalidEmail">Email inválido! Preencha o campo corretamente.</string>
    <string name="errorInvalidPassword">Senha inválida! A senha deve ser maior que 6 dígitos.</string>

    /* TTS */
    <string name="speakNow">Fale agora...</string>
    <string name="errorInitTTS">Erro ao iniciar TTS</string>
    <string name="errorSpeakTTS">Erro ao falar</string>
    <string name="errorStopTTS">Erro ao parar</string>
    <string name="errorShutdownTTS">Erro ao desligar</string>
    <string name="errorSetLanguageTTS">Erro ao definir idioma</string>
    <string name="errorOnTTS">Erro ao reconhecer fala</string>

    /* API Connection */

    <string name="errorConnectionAPI">Erro ao conectar com a API</string>
    <string name="errorGetResponseAPI">Erro ao obter resposta da API</string>
    <string name="btnQuestion">Continuar</string>
    <string name="finish">Parabéns! Você chegou até o final!</string>

</resources>